--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,13 @@
 <head>
   <meta charset="utf-8">
   <title>Jlm</title>
-  <base href="/">
+  <base href="/" target="_blank">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+	<style>
+	@import url('https://fonts.googleapis.com/css?family=Lora:400,400i,700&subset=latin-ext');
+	</style>
 </head>
 <body>
   <jlm-root>Loading...</jlm-root>
