Studio fonctionne et enregistre bien la vidéo, sous Chrome uniquement pour l'instant

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,8 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<style>
 	@import url('https://fonts.googleapis.com/css?family=Lora:400,400i,700&subset=latin-ext');
+  /*@import url('https://fonts.googleapis.com/css?family=Gloria+Hallelujah');*/
+
 	</style>
 </head>
 <body>
